Bug 138249 - PARAGRAPH STYLE DIALOG: Font color style change breaks when reverting to automatic color
Summary: PARAGRAPH STYLE DIALOG: Font color style change breaks when reverting to auto...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.4 all versions
Hardware: All All
: medium trivial
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Paragraph-Dialog Font-Effects Writer-Styles-Paragraph Automatic-Color
  Show dependency treegraph
 
Reported: 2020-11-16 03:32 UTC by João Paulo
Modified: 2025-10-16 00:57 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description João Paulo 2020-11-16 03:32:44 UTC
This is not the same as Bug 81654, nor is an accessibility related bug (Menu Tools, Options, LibreOffice, Accessibility).


Running:

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: pt-BR (pt_BR); UI: en-US
Calc: threaded


Steps to reproduce:

On LibreOffice Writer, create a new document and type a few words.  It will be probably typed with the Default Paragraph Style applied.

Press F11 to open the Sidebar on the Styles view, right-click on the Default Paragraph Style and select Modify.

Go to Font Effects, Font Color, and choose a color.  Any palette will do (custom, standard, chart-palettes, HTML, for example).

Press Apply (don't close the dialog).

Try to change the font color back to automatic, you'll see it's not possible to change by pressing Apply nor OK:  It is needed to close the dialog box and then change it back to automatic.

A second very related bug happens when I try to change the HTML palette color from Green to DarkGreen, Green, ForestGreen, SeaGreen, and then Green again:  The Green color is selectable, but the text does not change to it, I have to close the dialog box and then change it back to Green. I couldn't reproduce with other colors, maybe it is related to the "Green" name (or its hexadecimal value 008000).

Both bugs happen when trying to edit a paragraph or character style used on the text document.  Neither of them have serious consequences, they are just minor or trivial, annoying bugs.
Comment 1 Dieter 2020-12-01 08:03:53 UTC
(In reply to João Paulo from comment #0)
> Try to change the font color back to automatic, you'll see it's not possible
> to change by pressing Apply nor OK:  It is needed to close the dialog box
> and then change it back to automatic.

I confirm it with

Version: 7.0.3.1 (x64)
Build ID: d7547858d014d4cf69878db179d326fc3483e082
CPU threads: 4; OS: Windows 10.0 Build 19042; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 2 Dieter 2020-12-01 08:07:17 UTC
(In reply to João Paulo from comment #0)
> A second very related bug happens when I try to change the HTML palette
> color from Green to DarkGreen, Green, ForestGreen, SeaGreen, and then Green
> again:  The Green color is selectable, but the text does not change to it, I
> have to close the dialog box and then change it back to Green. I couldn't
> reproduce with other colors, maybe it is related to the "Green" name (or its
> hexadecimal value 008000).

Please open a separate report for this secon problem, since we can't mix two issues in one bug report. Thanks.
Comment 3 João Paulo 2020-12-03 23:28:19 UTC
(In reply to Dieter from comment #2)
> Please open a separate report for this secon problem, since we can't mix two
> issues in one bug report. Thanks.

I couldn't reproduce it again, so I will leave it for now.
Comment 4 João Paulo 2022-08-18 22:40:36 UTC
Just reporting this bug is still present on:

Version: 7.4.0.3 (x64) / LibreOffice Community
Build ID: f85e47c08ddd19c015c0114a68350214f7066f5a
CPU threads: 8; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: pt-BR (pt_BR); UI: en-US
Calc: threaded
Comment 5 Justin L 2025-10-15 21:48:21 UTC
repro 26.2+

There was no 'apply' button in OOo 3.3.
I reproduce the same problem when 'apply' first appeared in 3.4.
Comment 6 Commit Notification 2025-10-16 00:56:21 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1d315555b3660fa2b1d6582eb624d75ba3cb1e97

tdf#138249 cui: ignore m_aOrigFontColor

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.