tdf#138249 cui: ignore m_aOrigFontColor

In LO 3.4, an 'Apply' button was introduced,
and so any idea of "original color"
is now irrelevant.

Change-Id: I14e3812258fc7e66e94ce25600872d9bd9c0a397
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/192463
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>